--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                             <input id="terms" name="terms" type="checkbox" class="w-4 h-4 border border-slate-300 rounded bg-gray-50 focus:ring-3 focus:ring-orange-300" required>
                         </div>
                         <label for="terms" class="text-xs text-slate-500 text-left leading-tight">
-                            Declaro ser el titular o tener autorización para consultar estos datos. Acepto la <a href="politicas.html" target="_blank" class="text-brand-orange hover:underline font-bold">Política de Privacidad</a>.
+                            Declaro ser el titular o tener autorización para consultar estos datos. Acepto la <a href="politica.html" target="_blank" class="text-brand-orange hover:underline font-bold">Política de Privacidad</a>.
                         </label>
                     </div>
 
@@ -220,16 +220,29 @@
             </div>
 
             <div class="grid grid-cols-1 md:grid-cols-3 gap-6 items-center max-w-6xl mx-auto">
-                <div class="plan-card">
-                    <h3 class="text-xl md:text-2xl font-bold text-slate-900">Alfatel Hogar</h3>
-                    <div class="flex items-baseline my-4"><span class="text-4xl md:text-5xl font-extrabold text-slate-900">$15</span><span class="text-slate-500 ml-1">/mes</span></div>
-                    <div class="text-xs md:text-sm font-bold text-white bg-slate-900 px-4 py-2 rounded-xl inline-block mb-6">200 MEGAS</div>
-                    <ul class="space-y-3 mb-8">
-                        <li class="flex items-start gap-3 text-slate-600 text-sm"><i data-lucide="check" class="w-5 h-5 text-brand-orange shrink-0"></i> Fibra Óptica Pura</li>
-                        <li class="flex items-start gap-3 text-slate-600 text-sm"><i data-lucide="check" class="w-5 h-5 text-brand-orange shrink-0"></i> Router Dual Band</li>
-                    </ul>
-                    <button onclick="contratarPlan('Fibra Hogar 200 Megas - $15')" class="btn-outline">Solicitar Plan</button>
-                </div>
+             <div class="plan-card reveal">
+    <h3 class="text-xl md:text-2xl font-bold text-slate-900">Alfatel Hogar</h3>
+    
+    <div class="flex items-baseline my-4">
+        <span class="text-4xl md:text-5xl font-extrabold text-slate-900">$15</span>
+        <span class="text-slate-500 ml-1">/mes</span>
+    </div>
+
+    <div class="text-xs md:text-sm font-bold text-white bg-slate-900 px-4 py-2 rounded-xl inline-block mb-6">200 MEGAS</div>
+    
+    <ul class="space-y-3 mb-8">
+        <li class="flex items-start gap-3 text-slate-600 text-sm">
+            <i data-lucide="check" class="w-5 h-5 text-brand-orange shrink-0"></i> Fibra Óptica Pura
+        </li>
+        <li class="flex items-start gap-3 text-slate-600 text-sm">
+            <i data-lucide="check" class="w-5 h-5 text-brand-orange shrink-0"></i> Router Dual Band
+        </li>
+    </ul>
+
+    <button onclick="contratarPlan('Fibra Hogar 200 Megas - $15')" class="btn-outline">
+        Solicitar Plan
+    </button>
+</div>
 
                 <div class="relative bg-slate-50 rounded-3xl p-6 md:p-8 shadow-xl border border-orange-200 transform md:scale-105 z-10 reveal delay-100 mt-4 md:mt-0">
                     <div class="absolute -top-3 left-0 right-0 flex justify-center"><span class="bg-brand-orange text-white text-[10px] md:text-xs font-bold px-4 py-1 rounded-full uppercase tracking-wider shadow-lg">Más Vendido</span></div>
@@ -363,7 +376,7 @@
             <div class="border-t border-slate-900 pt-8 flex flex-col md:flex-row justify-between items-center gap-4 text-xs md:text-sm">
                 <p>&copy; 2024 ALFATEL.</p>
                 <div class="flex gap-6">
-                    <a href="politicas.html" target="_blank" class="hover:text-white hover:underline">Términos y Privacidad</a>
+                    <a href="politica.html" target="_blank" class="hover:text-white hover:underline">Términos y Privacidad</a>
                 </div>
             </div>
         </div>
