--- a/index.html
+++ b/index.html
@@ -368,8 +368,8 @@
                 <div>
                     <h4 class="text-white font-bold mb-6">Contacto</h4>
                     <ul class="space-y-4 text-sm">
-                        <li class="flex items-start justify-center md:justify-start gap-3"><i data-lucide="map-pin" class="w-5 h-5 text-brand-orange shrink-0"></i><span>Oficina Principal, Ecuador</span></li>
-                        <li class="flex items-center justify-center md:justify-start gap-3"><i data-lucide="phone" class="w-5 h-5 text-brand-orange shrink-0"></i><span>+593 98 224 6998</span></li>
+                        <li class="flex items-start justify-center md:justify-start gap-3"><i data-lucide="map-pin" class="w-5 h-5 text-brand-orange shrink-0"></i><span>Oficina Principal, Calle Olmedo Y los Andes-Radio Horizonte</span></li>
+                        <li class="flex items-center justify-center md:justify-start gap-3"><i data-lucide="phone" class="w-5 h-5 text-brand-orange shrink-0"></i><span>+593 999395460</span></li>
                     </ul>
                 </div>
             </div>
